--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,2 +1,35 @@
-.module > i
-  { padding: 2px }
+header
+{
+  position: relative;
+
+  & > h1
+  {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px
+  }
+
+  & > a
+  {
+    position: absolute;
+    left: 10px;
+    top: 0px;
+    display: inline-block;
+    width: 60px;
+    height: 55px;
+    background: url( "img/home.png" ) no-repeat;
+  }
+}
+
+.module
+{
+  cursor: pointer;
+
+  & > i
+    { padding: 2px }
+}
+
+.slide > img
+{
+  padding: 0px 60px;
+}
