--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -17,7 +17,7 @@ header
     display: inline-block;
     width: 60px;
     height: 55px;
-    background: url( "img/home.png" ) no-repeat;
+    background: url( img/home.png ) no-repeat;
   }
 }
 
